correctly align category tag

--- a/app/assets/stylesheets/todos.scss
+++ b/app/assets/stylesheets/todos.scss
@@ -33,6 +33,11 @@
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 }
 
+.item-actions {
+  vertical-align: middle;
+  margin-bottom: 0.25em;
+}
+
 //label
 .status-label {
   padding: 8px 8px;
